# sg-law-cookies

./: .env.example  .gitignore  enrichment-pipeline-pseudocode.md  pyproject.toml  sg-law-cookies-v2-prd.md
.wrangler/cache/: pages.json  wrangler-account.json
mockups/: a-night-desk.html  b-morning-paper.html  c-atlas.html  d-bakery.html  e-bakery-shopfront.html  f-bakery-lovecon.html  g-skyline.html  h-counter-map.html
scripts/: activate_zeeker_sources.py  deploy.sh  refresh_folio_areas.py  vps_cycle.sh
src/sg_law_cookies/: __init__.py  area_vocab.py  backfill.py  backup.py  cli.py  config.py  db.py  extraction.py  feed.py  folio.py  judgment.py  llm.py  models.py  pipeline.py  prompts.py  prompts_judgment.py  sg_mappings.py  sitegen.py  skydata.py  zeeker.py
src/sg_law_cookies/data/: folio_areas.json
src/sg_law_cookies/static/: site.css  sky.css  sky.js
src/sg_law_cookies/templates/: _macros.html.j2  about.html.j2  archive.html.j2  base.html.j2  counter_map.html.j2  daily.html.j2  feed.xml.j2  weekly.html.j2  weekly_index.html.j2
tests/: test_backup.py  test_counter_map_template.py  test_db.py  test_db_judgments.py  test_db_reads.py  test_extraction.py  test_feed.py  test_folio.py  test_folio_judgments.py  test_judgment.py  test_llm.py  test_llm_structured.py  test_models.py  test_pipeline.py  test_pipeline_judgments.py  test_sitegen.py  test_sitegen_sky.py  test_skydata.py  test_zeeker.py  test_zeeker_judgments.py
