[project]
name = "sg-law-cookies"
version = "0.1.0"
description = "SG Law Cookies v2 — legal signal platform built on data.zeeker.sg"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
cookies = "sg_law_cookies.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_law_cookies"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: tests that hit live external APIs (deselect with '-m \"not live\"')"]
addopts = "-m 'not live'"
